name:                game-clock
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JunKikuchi/game-clock#readme
license:             BSD3
license-file:        LICENSE
author:              Jun Kikuchi
maintainer:          kikuchi@bonnou.com
copyright:           2017 Jun Kikuchi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GameClock
                     , GameClock.Clock
                     , GameClock.Clock.Sec
                     , GameClock.Clock.Unit
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable game-clock-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , game-clock
  default-language:    Haskell2010

test-suite game-clock-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , tasty-smallcheck
                     , tasty-quickcheck
                     , tasty
                     , game-clock
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       GameClockTest.ClockTest.UnitTest
                     , GameClockTest.ClockTest.UnitTest.CountDownTest
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JunKikuchi/game-clock
